<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewsCreateActivity">

    <FrameLayout style="@style/AppTheme"
        android:id="@+id/headerbar"
        android:outlineProvider="bounds"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar_actionbar"/>
    </FrameLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="40dp"
        android:layout_height="40dp" />


    <LinearLayout
        android:id="@+id/main_content"
        android:layout_below="@+id/headerbar"
        android:orientation="vertical"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/time_text_view"
            android:text="2015-7-25"
            android:textColor="@color/color_black"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/news_title"
                android:textColor="@color/color_black"
                android:textSize="16sp"
                android:layout_marginRight="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



            <EditText
                android:id="@+id/title_edit_text"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/news_title_input_tip"
                android:textSize="16sp"
                android:maxLength="20"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content" />


            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<EditText-->
                    <!--android:id="@+id/title_edit_text"-->
                    <!--android:maxLines="1"-->
                    <!--android:singleLine="true"-->
                    <!--android:hint="@string/news_title_input_tip"-->
                    <!--android:textSize="16sp"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:imeOptions="actionNext"-->
                    <!--android:layout_height="wrap_content" />-->

            <!--</android.support.design.widget.TextInputLayout>-->


        </LinearLayout>


        <TextView
            android:text="@string/input_news_content"
            android:textSize="16sp"
            android:textColor="@color/color_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/news_content_edit_text"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textColor="@color/color_black"
            android:inputType="textMultiLine"
            android:gravity="left|top"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_selector"
            android:layout_height="240dp"
            android:imeActionLabel="@string/publish_news"
            android:imeOptions="actionNext"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_toLeftOf="@+id/publish_free_checkbox"
                android:text="@string/publish_news_for_free"
                android:textColor="@color/color_black"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/publish_free_checkbox"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/news_value"
                android:textColor="@color/color_black"
                android:textSize="16sp"
                android:layout_marginRight="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/value_edit_text"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/news_value_tip"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <Button
            android:id="@+id/publish_button"
            android:text="@string/publish_news"
            android:enabled="false"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="40dp" />


    </LinearLayout>





</RelativeLayout>
